--- a/Nodejs/src/views/crud.ejs
+++ b/Nodejs/src/views/crud.ejs
@@ -38,11 +38,11 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">First name</label>
-                        <input type="text" class="form-control" placeholder="Email" name="firstName">
+                        <input type="text" class="form-control" placeholder="First name" name="firstName">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputPassword4">Last name</label>
-                        <input type="text" class="form-control" placeholder="Password" name="lastName">
+                        <input type="text" class="form-control" placeholder="Last name" name="lastName">
                     </div>
                 </div>
                 <div class="form-group">
