--- a/Nodejs/src/views/crud.ejs
+++ b/Nodejs/src/views/crud.ejs
@@ -53,7 +53,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputCity">Phone number</label>
-                        <input type="text" class="form-control" id="inputCity" name="phoneNumber">
+                        <input type="text" class="form-control" id="inputCity" name="phonenumber">
                     </div>
                     <div class="form-group col-md-3">
                         <label for="inputState">Sex</label>
