--- a/Reactjs/src/containers/Auth/Login.scss
+++ b/Reactjs/src/containers/Auth/Login.scss
@@ -7,12 +7,14 @@
   height: 100vh;
 
   .login-container {
-    max-width: 500px;
-    min-width: 300px;
-    max-height: 700px;
-    width: 30%;
-    height: 55%;
-    margin: 0 auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 400px;
+    height: 60vh;
+    margin: auto;
     border-radius: 10px;
     background-color: #fff;
 
@@ -28,6 +30,17 @@
 
       .login-input {
         margin: 7px 0;
+
+        .custom-input-password {
+          position: relative;
+
+          i {
+            position: absolute;
+            top: 10px;
+            right: 5px;
+            cursor: pointer;
+          }
+        }
       }
 
       .btn-login {
@@ -44,6 +57,7 @@
         );
         color: #fff;
         font-size: 16px;
+        margin-top: 50px;
       }
 
       .forgot-password {
