--- a/Reactjs/src/containers/Auth/Login.scss
+++ b/Reactjs/src/containers/Auth/Login.scss
@@ -13,7 +13,7 @@
     bottom: 0;
     left: 0;
     width: 400px;
-    height: 60vh;
+    height: 550px;
     margin: auto;
     border-radius: 10px;
     background-color: #fff;
