--- a/Reactjs/src/containers/HomePage/HomeHeader.scss
+++ b/Reactjs/src/containers/HomePage/HomeHeader.scss
@@ -1,7 +1,7 @@
 .home-header-container {
   height: 60px;
   width: 100%;
-  padding: 0 20px;
+  padding: 0 40px;
 
   .home-header-content {
     width: 100%;
@@ -9,15 +9,16 @@
     display: flex;
 
     .left-content {
-      width: 25%;
+      width: 20%;
       display: flex;
       align-items: center;
 
       .header-logo {
-        background: url("../../assets/logo.svg") center center no-repeat;
         width: 100%;
         height: 100%;
         cursor: pointer;
+        transform: scale(0.5, 0.5);
+        margin-left: -45px;
       }
       i {
         font-size: 25px;
@@ -26,7 +27,7 @@
       }
     }
     .center-content {
-      width: 50%;
+      width: 55%;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -42,6 +43,110 @@
       display: flex;
       justify-content: center;
       align-items: center;
+    }
+  }
+}
+.home-header-banner {
+  background: url("../../assets/header-background.jpg");
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+
+  .content-up {
+    background: linear-gradient(
+      rgba(126, 126, 126, 0.25),
+      rgba(255, 255, 255, 0.1)
+    );
+    height: 65%;
+    padding-top: 15px;
+
+    .title1 {
+      color: white;
+      text-align: center;
+      font-size: 30px;
+      text-shadow: 1px 1px 1px #333;
+      margin: 30px 0 5px 0;
+    }
+
+    .title2 {
+      color: white;
+      text-align: center;
+      font-size: 30px;
+      text-shadow: 1px 1px 1px #333;
+      margin-bottom: 25px;
+    }
+
+    .search {
+      width: fit-content;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0 auto;
+      padding: 10px;
+      border-radius: 25px;
+      background-color: #f7d800;
+
+      i {
+        margin: 0 5px;
+      }
+      input {
+        height: 30px;
+        width: 350px;
+        background: transparent;
+        outline: none;
+        border: none;
+      }
+    }
+  }
+
+  .content-down {
+    height: 35%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    background-image: linear-gradient(
+      rgba(255, 255, 255, 0.1),
+      rgba(255, 255, 255, 0.9),
+      rgba(255, 255, 255, 1)
+    );
+
+    .options {
+      text-align: center;
+      display: flex;
+      gap: 50px;
+      justify-content: center;
+
+      .option-child {
+        width: 100px;
+
+        .icon-child {
+          background: white;
+          width: 40px;
+          height: 40px;
+          padding: 10px;
+          border-radius: 50%;
+          text-align: center;
+          margin: 0 auto;
+
+          i {
+            color: #49bce2;
+            font-size: 20px;
+          }
+        }
+
+        .text-child {
+          font-size: 17px;
+          font-weight: 500;
+
+          &:hover {
+            color: #49bce2;
+            cursor: pointer;
+          }
+        }
+      }
     }
   }
 }
