--- a/Reactjs/src/containers/HomePage/HomeHeader.scss
+++ b/Reactjs/src/containers/HomePage/HomeHeader.scss
@@ -1,5 +1,5 @@
 .home-header-container {
-  height: 60px;
+  height: 65px;
   width: 100%;
   padding: 0 40px;
 
@@ -18,12 +18,13 @@
         height: 100%;
         cursor: pointer;
         transform: scale(0.5, 0.5);
-        margin-left: -45px;
+        margin-left: -55px;
       }
       i {
         font-size: 25px;
         color: gray;
         cursor: pointer;
+        margin-right: -10px;
       }
     }
     .center-content {
@@ -41,8 +42,52 @@
     .right-content {
       width: 25%;
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
       align-items: center;
+
+      .support {
+        padding-right: 50px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+
+        i {
+          font-size: 15px;
+          margin-right: 5px;
+        }
+      }
+
+      .language-vi {
+        cursor: pointer;
+        opacity: 0.2;
+
+        &.active {
+          opacity: 1;
+
+          span {
+            color: orange;
+          }
+        }
+        &:hover {
+          opacity: .8;
+        }
+      }
+      .language-en {
+        margin: 0 10px;
+        cursor: pointer;
+        opacity: 0.2;
+
+        &.active {
+          opacity: 1;
+
+          span {
+            color: blue;
+          }
+        }
+        &:hover {
+          opacity: .8;
+        }
+      }
     }
   }
 }
