--- a/Reactjs/src/containers/HomePage/HomeHeader.scss
+++ b/Reactjs/src/containers/HomePage/HomeHeader.scss
@@ -93,7 +93,7 @@
 }
 .home-header-banner {
   background: url("../../assets/header-background.jpg");
-  height: 500px;
+  height: 650px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -107,19 +107,23 @@
     );
     height: 65%;
     padding-top: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     .title1 {
       color: white;
       text-align: center;
-      font-size: 30px;
+      font-size: 32px;
       text-shadow: 1px 1px 1px #333;
       margin: 30px 0 5px 0;
+      text-transform: uppercase;
     }
 
     .title2 {
       color: white;
       text-align: center;
-      font-size: 30px;
+      font-size: 32px;
       text-shadow: 1px 1px 1px #333;
       margin-bottom: 25px;
     }
