--- a/Reactjs/src/containers/HomePage/HomePage.scss
+++ b/Reactjs/src/containers/HomePage/HomePage.scss
@@ -1,3 +1,6 @@
+* {
+  font-family: "Montserrat", sans-serif;
+}
 .slick-prev {
   left: -10px !important;
   z-index: 1000 !important;
@@ -33,14 +36,17 @@
 }
 
 .section-share {
-  &.section-medical-facility, &.section-handbook {
+  &.section-medical-facility,
+  &.section-handbook {
     background: #f5f5f5;
   }
   &.section-outstanding-doctor {
     width: 100%;
     height: 384px;
   }
-
+  &.section-about {
+    height: 467px;
+  }
 
   .section-body {
     margin-top: 20px;
@@ -89,8 +95,9 @@
       padding-top: 30px;
 
       .title-section {
-        font-size: 22px;
-        font-weight: 600;
+        display: inline-block;
+        font-size: 24px !important;
+        font-weight: 700 !important;
       }
 
       .btn-section {
@@ -125,6 +132,80 @@
     .customize-border {
       border: 1px solid #eee;
       padding: 20px;
+    }
+  }
+}
+
+.home-footer {
+  height: 60px;
+  padding-top: 10px;
+  background-color: #64b9e5;
+
+  .footer-content {
+    max-width: 1170px;
+    margin: auto;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    .icon-mxh {
+      display: flex;
+      flex-direction: flex-end;
+      img {
+        margin-left: 10px;
+      }
+    }
+    p {
+      font-size: 16px;
+    }
+    a {
+      text-decoration: none;
+    }
+  }
+}
+.section-about {
+  max-width: 1170px;
+  margin: auto;
+  padding-top: 15px;
+
+  .about-container {
+    font-size: 14px;
+    line-height: 21px;
+    padding: 0px 15px;
+
+    .section-about-header {
+      font-weight: 700;
+      padding: 20px 10px;
+    }
+    .header-about{
+      padding-top: 15px;
+      padding-bottom: 30px;
+    }
+
+    .section-about-content {
+      display: flex;
+      gap: 15px;
+      width: 100%;
+
+      .content-left {
+        width: 60%;
+      }
+      .content-right {
+        width: 40%;
+        line-height: 2.5;
+        font-size: 16px;
+        font-style: italic;
+        a {
+          color: #000;
+          text-decoration: none;
+          &:hover {
+            color: #c50327;
+          }
+        }
+        ul {
+          list-style-type: none;
+        }
+      }
     }
   }
 }
