render dynamic data from db

--- a/Reactjs/src/containers/HomePage/HomePage.scss
+++ b/Reactjs/src/containers/HomePage/HomePage.scss
@@ -67,7 +67,7 @@
           background-image: url("../../assets/medical-facility/bv-viet-duc.jpg");
         }
         &.section-outstanding-doctor {
-          background-image: url("../../assets/outstanding-doctor/bshung.jpg");
+          // background-image: url("../../assets/outstanding-doctor/bshung.jpg");
           width: 120px;
           height: 120px;
           border-radius: 50%;
