--- a/Reactjs/src/containers/HomePage/HomePage.scss
+++ b/Reactjs/src/containers/HomePage/HomePage.scss
@@ -1,6 +1,9 @@
 * {
   font-family: "Montserrat", sans-serif;
 }
+.slick-disabled {
+  display: none !important;
+}
 .slick-prev {
   left: -10px !important;
   z-index: 1000 !important;
