--- a/Reactjs/src/containers/Patient/Doctor/DoctorDetail.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DoctorDetail.scss
@@ -1,11 +1,11 @@
 .doctor-detail-container {
-  max-width: 1170px;
-  margin: auto;
-  border: 1px solid red;
+  font-size: 14px;
+  line-height: 2;
 
   .intro-doctor {
     display: flex;
-    border: 1px solid green;
+    max-width: 1170px;
+    margin: auto;
 
     .content-left {
       background: center center no-repeat;
@@ -21,7 +21,7 @@
       flex-direction: column;
 
       .up {
-          padding-top: 15px;
+        padding-top: 15px;
         font-size: 20px;
         font-weight: 600;
       }
@@ -31,8 +31,38 @@
       }
     }
   }
+  .content-doctor {
+    border-width: 1px 1px 0 1px;
+    border: 1px solid #ccc;
+    background: #f9f9f9;
+    .detail-info-doctor {
+      padding: 30px 20px;
+      max-width: 1170px;
+      margin: auto;
 
-  .detail-info-doctor{
-      padding: 0 20px;
+      h2 {
+        font-size: 18px;
+        font-weight: 600;
+      }
+
+      h3 {
+        font-size: 16px;
+        font-weight: 600;
+      }
+
+      list-style-position: inside;
+      li {
+        text-indent: 15px;
+      }
+
+      img {
+        width: 80%;
+        margin: auto;
+      }
+    }
+
+    .comment-doctor {
+      margin-top: 20px;
+    }
   }
 }
