--- a/Reactjs/src/containers/System/Admin/ManageDoctor.scss
+++ b/Reactjs/src/containers/System/Admin/ManageDoctor.scss
@@ -24,6 +24,21 @@
     }
   }
 
+  .create-content-doctor {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    border-radius: 4px;
+    outline: none;
+    padding: 5px;
+    border: none;
+    background-color: rgb(0, 248, 83);
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+
   .more-info {
     display: flex;
     gap: 15px;
