--- a/Reactjs/src/containers/System/Doctor/ManageSchedule.scss
+++ b/Reactjs/src/containers/System/Doctor/ManageSchedule.scss
@@ -8,7 +8,18 @@
   }
 
   .pick-hour-container {
-    height: 156px;
-    border: 1px solid red;
+    padding: 20px;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+
+    button {
+      padding: 10px 15px;
+      border: 1px solid gray;
+    }
+  }
+
+  .btn-save-schedule {
+    margin-top: 20px;
   }
 }
