schedule add field

--- a/Reactjs/src/containers/System/Doctor/ManageSchedule.scss
+++ b/Reactjs/src/containers/System/Doctor/ManageSchedule.scss
@@ -19,6 +19,12 @@
     }
   }
 
+  .btn-schedule {
+    &.active {
+      background-color: orange;
+    }
+  }
+
   .btn-save-schedule {
     margin-top: 20px;
   }
