--- a/Reactjs/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -1,11 +1,11 @@
 .doctor-detail-container {
   font-size: 14px;
   line-height: 2;
+  max-width: 1170px;
+  margin: auto;
 
   .intro-doctor {
     display: flex;
-    max-width: 1170px;
-    margin: auto;
 
     .content-left {
       background: center center no-repeat;
@@ -31,38 +31,50 @@
       }
     }
   }
-  .content-doctor {
+  .schedule-doctor {
+    margin: 0 100px;
+    display: flex;
+    height: 200px;
+    margin: auto;
+
+    .content-left {
+      width: 50%;
+    }
+
+    .content-right {
+      width: 50%;
+    }
+  }
+  .detail-info-doctor {
     border-width: 1px 1px 0 1px;
     border: 1px solid #ccc;
     background: #f9f9f9;
-    .detail-info-doctor {
-      padding: 30px 20px;
-      max-width: 1170px;
+    padding: 30px 20px;
+    max-width: 1170px;
+    margin: auto;
+
+    h2 {
+      font-size: 18px;
+      font-weight: 600;
+    }
+
+    h3 {
+      font-size: 16px;
+      font-weight: 600;
+    }
+
+    list-style-position: inside;
+    li {
+      text-indent: 15px;
+    }
+
+    img {
+      width: 80%;
       margin: auto;
-
-      h2 {
-        font-size: 18px;
-        font-weight: 600;
-      }
-
-      h3 {
-        font-size: 16px;
-        font-weight: 600;
-      }
-
-      list-style-position: inside;
-      li {
-        text-indent: 15px;
-      }
-
-      img {
-        width: 80%;
-        margin: auto;
-      }
     }
+  }
 
-    .comment-doctor {
-      margin-top: 20px;
-    }
+  .comment-doctor {
+    margin-top: 20px;
   }
 }
