--- a/Reactjs/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -34,7 +34,8 @@
   .schedule-doctor {
     margin: 0 100px;
     display: flex;
-    height: 200px;
+    min-height: 200px;
+    padding: 10px 0;
     margin: auto;
 
     .content-left {
