--- a/Reactjs/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -8,7 +8,9 @@
     display: flex;
 
     .content-left {
-      background: center center no-repeat;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
       width: 120px;
       height: 120px;
       border-radius: 50%;
