--- a/Reactjs/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/Reactjs/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -3,10 +3,13 @@
     display: flex;
 
     .content-left {
-      background: center center no-repeat;
-      width: 120px;
-      height: 80px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 100px;
+      height: 100px;
       border-radius: 50%;
+      margin-right: 10px;
     }
 
     .content-right {
