--- a/Reactjs/src/containers/HomePage/HomePage.scss
+++ b/Reactjs/src/containers/HomePage/HomePage.scss
@@ -67,7 +67,7 @@
           // background-image: url("../../assets/specialty/co-xuong-khop.jpg");
         }
         &.section-medical-facility {
-          background-image: url("../../assets/medical-facility/bv-viet-duc.jpg");
+          // background-image: url("../../assets/medical-facility/bv-viet-duc.jpg");
         }
         &.section-outstanding-doctor {
           // background-image: url("../../assets/outstanding-doctor/bshung.jpg");
@@ -181,7 +181,7 @@
       font-weight: 700;
       padding: 20px 10px;
     }
-    .header-about{
+    .header-about {
       padding-top: 15px;
       padding-bottom: 30px;
     }
