--- a/Reactjs/src/containers/Patient/Clinic/DetailClinic.scss
+++ b/Reactjs/src/containers/Patient/Clinic/DetailClinic.scss
@@ -1,11 +1,11 @@
-.detail-specialty-container {
-  .detail-specialty-body {
+.detail-clinic-container {
+  .detail-clinic-body {
     padding: 0 100px;
     background: #eee;
     display: flex;
     flex-direction: column;
 
-    .description-specialty {
+    .description-clinic {
       background-color: #fff !important;
       padding: 30px;
       margin: 15px 0;
