--- a/Reactjs/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -30,6 +30,10 @@
 
       .down {
         padding-top: 10px;
+
+        .like-share-plugin {
+          margin: 10px 0 20px 0;
+        }
       }
     }
   }
@@ -79,5 +83,6 @@
 
   .comment-doctor {
     margin-top: 20px;
+    padding: 10px 200px;
   }
 }
